--- a/Jdbc_Crud_App/.classpath
+++ b/Jdbc_Crud_App/.classpath
@@ -6,7 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Oracle"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ioutils"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/oracle"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
