--- a/Jdbc_Crud_App/src/credentials/loginInfo.properties
+++ b/Jdbc_Crud_App/src/credentials/loginInfo.properties
@@ -1,3 +1,3 @@
-url=jdbc:Oracle:thin:@localhost:1521:orcl
-userName=practice
-password=1234
+jdbcUrl= jdbc:oracle:thin:@localhost:1521:orcl
+dataSource.user=practice
+dataSource.password=1234
